syntax="proto3";

package com.poker.protocols.game.proto; 

option java_package = "com.poker.protocols.game";
option java_outer_classname = "GameTableProto";

message GameTable{
	int32  tid  = 1;
	int32  count    = 2;
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/game/proto/GameTable.proto 